tests/snapshots/codegen_programs__unary.snap
---
source: tests/codegen_programs.rs
expression: "int answer(void) { return -!0; }"
---
	.section	__TEXT,__text,regular,pure_instructions
	.globl	_answer
	.p2align	2
_answer:
	stp x29, x30, [sp, #-48]!
	mov x29, sp
	movz w0, #0
	cmp w0, #0
	cset w0, eq
	neg w0, w0
	b Lanswer_return_0
Lanswer_return_0:
	mov sp, x29
	ldp x29, x30, [sp], #48
	ret
.subsections_via_symbols
